# FastAPI_Practice

./: main.py  pyproject.toml  router_example.py  simple_agent.py
ai_flashcard/: main.py
ai_flashcard/agents/: __init__.py  agent.py
ai_flashcard/routes/: __init__.py  topics.py
ai_studio_notes/: ai_logs.txt  bg_tasks.py  main.py
ai_studio_notes/agents/: __init__.py  agent.py
ai_studio_notes/routes/: notes.py
api_exercise/: security.py
api_routers/: main.py
api_routers/routes/: tasks.py
dependencies/: dependencies.py
exercise_GET_POST/: 00_basics.py  put_delete.py  random_id.py
llm_fastapi/: async_await.py  simple_agent.py  streaming.py
recipes_exercise/: main.py
recipes_exercise/agents/: __init__.py  agent.py
recipes_exercise/routes/: __init__.py  recipes.py
