[project]
name = "fastapi-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "langchain>=1.2.3",
    "langchain-xai>=1.2.1",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.40.0",
]
